--- a/css/style-aula6.css
+++ b/css/style-aula6.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 400px;
     background-color: blue;
+    position: relative;
 }
 
 .div1 {
@@ -16,9 +17,9 @@
 }
 
 .div2 {
-    position: relative;
-    z-index: 3;
-    background-color: white;
+    position: sticky;
+    top: 10px;
+    background-color: #bd1479;
     display: inline-block;
     width: 30%;
     height: 100px;
@@ -29,6 +30,9 @@
     display: inline-block;
     width: 30%;
     height: 100px;
+    position: absolute;
+    top: 140px;
+    right: 20%;
 }
 
 .whatsapp{
@@ -39,6 +43,28 @@
     bottom: 10px;
     right: 10px;
     position: fixed;
+    z-index: 4;
+    opacity: 0.9;
+}
+
+.background{
+position: relative;
+display: inline-block;
+width: 100%;
+height: 400px;
+
+}
+.centro{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    text-align: center;
+    color: #000;
+}
+img{
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
 }
 
 /*position indica a posicao do elemente:
@@ -46,5 +72,9 @@
 -static: padrao fica fixo na tela
 -fixed: usa para deixar o elemento fixo na tela independentemente 
 da barra de rolagem baixar ou subir
--absolute: 
+-absolute: posicionamento do elemento com relacao ao elemento pai
+so funciona se o seu elemento pai tiver um position tambem, e difenete do static
+ou padrao
+-sticky: ele fica pegajoso, e muito usado em imagens que se movimentam 
+no fundo da pagina
 */
