--- a/css/style-aula6.css
+++ b/css/style-aula6.css
@@ -59,13 +59,16 @@ height: 400px;
     width: 100%;
     top: 50%;
     text-align: center;
-    color: #000;
+    color: #fff;
+    background-color: #000;
+    opacity: 0.7;
 }
 img{
     width: 100%;
     height: 100%;
     opacity: 0.5;
 }
+
 
 /*position indica a posicao do elemente:
 -relative: usa-se para deslocar o elemente relativo ao local em que esta
